fixed styling for loginpage on small devices

--- a/public/styles.css
+++ b/public/styles.css
@@ -38,8 +38,11 @@ form {
 }
 form input {
     border: 1px solid #b7baaf ;
+    width: 96%;
+    padding: 5px 15px;
     border-radius: 10px;
     margin: 9px;
+    font-size: 16px;
 }
 .signbtn {
     padding: 5px 10px;
